2001-01-27  Richard Henderson  <rth@redhat.com>

	* config/alpha/t-ieee: Remove multilibbing.
	(TARGET_LIBGCC2_CFLAGS): Add -mieee.

2001-01-27  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* configure.in: Arrange to include defaults.h in [ht]config.h/tm.h.

	* Makefile.in: Remove all dependencies on defaults.h.
	* builtins.c: Don't include defaults.h.
	* c-common.c: Likewise.
	* c-decl.c: Likewise.
	* c-pragma.c: Likewise.
	* c-typeck.c: Likewise.
	* combine.c: Likewise.
	* i386.c: Likewise.
	* frame-ia64.c: Likewise.
	* cppexp.c: Likewise.
	* crtstuff.c: Likewise.
	* dbxout.c: Likewise.
	* dwarf2out.c: Likewise.
	* dwarfout.c: Likewise.
	* emit-rtl.c: Likewise.
	* except.c: Likewise.
	* expr.c: Likewise.
	* final.c: Likewise.
	* frame-dwarf2.c: Likewise.
	* libgcc2.c: Likewise.
	* optabs.c: Likewise.
	* profile.c: Likewise.
	* sdbout.c: Likewise.
	* toplev.c: Likewise.
	* tradcif.y: Likewise.
	* tree.c: Likewise.
	* varasm.c: Likewise.

2001-01-27  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* builtins.c (expand_builtin_fputs): Use size_one_node when
	transforming into fwrite.

2001-01-27  Joseph S. Myers  <jsm28@cam.ac.uk>

	* extend.texi (Attribute Syntax): New section.

2001-01-27  Michael Sokolov  <msokolov@ivan.Harhan.ORG>

	* fixproto: Correctly install synthesised unistd.h and stdlib.h when
	they didn't need fixing.

2001-01-27  Janis Johnson <janis@us.ibm.com>

	* config.gcc (i[34567]86-sequent-{ptx4*,sysv4*}): Use usegas.h
	if appropriate.
	* config/ptx4.h: Several fixes to build on DYNIX/ptx v4.[456], and
	to remove macro definitions that are duplicated from elfos.h.

2001-01-27  Richard Henderson  <rth@redhat.com>

	* config/i386/sco5gas.h: Move ...
	* config/usegas.h: ... here.
	* config.gcc (i[34567]86-*-sco3.2v5) [tm_file]: Update.

2001-01-27  Jakub Jelinek  <jakub@redhat.com>

	* c-typeck.c (struct constructor_stack): Add range_stack member.
	(really_start_incremental_init): Clear it.
	(push_init_level): Save constructor_range_stack and clear it if