@@ -1,3 +1,8 @@
+2001-02-01  Richard Henderson  <rth@redhat.com>
+
+	* local-alloc.c (update_equiv_regs): Copy INSN_CODE to the
+	new instruction.
+
 2001-01-27  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/t-ieee: Remove multilibbing.
